# code-rag

./: .gitignore  hsm.yaml  main.py  pyproject.toml
docs/: architecture.md
docs/architecture/: stage-2-specification.md
docs/contracts/: README.md  contract-tests.md  web-ui.openapi.yaml
docs/testing/: test-map.md
hsm-registry/services/: code-rag-backend.yaml  code-rag-frontend.yaml
plans/: backend-package-architecture-variant-b-with-c-evolution.md  stage-3-planning-input.md  t01-t03-code-implementation-plan.md  task-05-ui-skeleton-routing-architecture-plan.md  task-11-remediation-architecture-plan.md
src/code_rag/: __init__.py
tasks_descriptions/research/: reasearch_results.md  research-ollama-qwen3-embedding-vs-bge-m3.md
tasks_descriptions/tasks/: task-01-contract-first-package-v1.md  task-02-web-ui-api-contract-openapi.md  task-03-backend-project-registry-crud.md  task-04-backend-indexing-job-progress.md  task-05-ui-skeleton-routing.md  task-05a-frontend-bootstrap-vite-tailwind.md  task-05b-frontend-routing-navigation-contract.md  task-05c-app-shell-layout-dark-ide-style.md  task-05d-ui-placeholders-loading-error-empty.md  task-05e-frontend-docker-hsm-runtime-wiring.md  task-05f-frontend-verification-and-code-handoff.md  task-06-ui-progress-status.md  task-07-ui-settings-forms.md  task-08-testing-l2-contract-tests.md  task-09-testing-l4-ui-e2e-visual.md  task-10-python-code-style-tooling.md  task-11-post-refactor-component-boundaries-validation.md  task-12a-backend-domain-core-package-extraction.md  task-12b-backend-indexing-pipeline-package-extraction.md  (+3 more)
(+19 files in other folders)
